# af

./: .env  AGENTS.MD  AGENTS.md
backend/: Cargo.toml
backend/.sqlx/: query-00f66f6a88ebdbb56858f0c6d03b2e257be71dab25252d01e759f31202af8fa4.json  query-01980bcf64eed3ea556524b20dd167f38d677e26df9e5f78df455a70dc169aff.json  query-01a97fcf06750f4f486d166739353ea00281af3535ae32959d188a19b0374def.json  query-0804899293e8e1c42b4a80f96ef5bf273d3a0a531b1ac986c90ea75af4f9a64a.json  query-087f996c55350e6385e4b3d67fbe2817071d438b0f0943385667cca2bef1df9a.json  query-08fdccfa0f9802f8841e1f078535a119953ac2a3dd660791b74e8e6b63cf380c.json  query-0d89538d26bb0c0e171725225a506c5f1243c3951488d0ba7b4fd962ee0f0d3d.json  query-117cf76ac27f30ad2ba4ebe36c0c93150494ad96ca9bbecf82d68deb6bd28c3f.json  query-1316d664b8f304955df4bfdac84df9682240dfe7e60d0b05e9b5ba13c240159b.json  query-138041c691f02425d3492d96d3893e587153d93bff67d599cdc3b5813c27f0b6.json  query-1c64ad30718d40bb6b41251c5af87f7f9114bff4f2aec225266460b11517167d.json  query-20931d01529c5047540131204eff98798c3ecda50f34d4b381f68474c0727c8e.json  query-2213dd5cd73b01560d5d317b58356a03fc0ef6e63d79e3b8198ff820104c3d1d.json  query-2323492255e12236b640d249e31a2eedf2517b24f8f7205e789001cc66e20d16.json  query-2aa0774932639bf2b13f8d25b6ab6c81e73aa7bda12ad3f36aaf60e2ba85567e.json  query-2d17c38a974a4568cc804bb33eccd83dd6ae25b466a850c473078b5ba5514899.json  query-32dd4ac58ce1c41bdecfc95ba9e520a119dd2452e3672d374131d3fdd62667e0.json  query-41cf8caaaae94bf4e379e5c5f7556ecd3b335ae294a7f29677e4974bd8353da3.json  query-42b56829ee2d9c7cd2975edb62592d073af49dd7f03d0188157b8bbcc2d0dd7e.json  (+53 more)
backend/migrations/: 20260204202616_init.sql  (+30 more)
(+101 files in other folders)
