[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
argon2 = "0.5.3"
axum = "0.8.8"
async-stream = "0.3.6"
clap = { version = "4.5.57", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "json",
    "time",
    "macros",
    "ipnetwork",
] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
time = { version = "0.3.47", features = ["serde", "serde-well-known"] }
uuid = { version = "1.20.0", features = ["v7", "serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
tower-http = { version = "0.6.8", features = ["trace"] }
rand = "0.8"
